[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Torch.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TorchLight.png" type="Texture" id=2]
[ext_resource path="res://TorchLight.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 13 )

[node name="TorchLight" type="Area2D"]
collision_layer = 16
collision_mask = 32
script = ExtResource( 3 )

[node name="LightCollision" type="CollisionShape2D" parent="."]
position = Vector2( -41, 0 )
shape = SubResource( 1 )

[node name="Torch" type="Sprite" parent="."]
position = Vector2( -21, 1.90735e-06 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="TorchLight" type="Sprite" parent="."]
position = Vector2( -26, -12 )
rotation = 1.5708
scale = Vector2( 0.217012, 0.223679 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 112, 134 )

[node name="TorchCollision" type="CollisionShape2D" parent="."]
position = Vector2( -21.5, 0 )
shape = SubResource( 2 )
